@@ -152,7 +152,12 @@ main(int  argc,				/* I - Number of command-line arguments */
       }
 
       if (SAMBAServer == NULL)
+      {
 	SAMBAServer = cupsServer();
+
+	if (SAMBAServer[0] == '/')	/* Use localhost instead of domain socket */
+	  SAMBAServer = "localhost";
+      }
 
       if ((status = export_dest(http, argv[i])) != 0)
 	return (status);
@@ -182,7 +187,12 @@ main(int  argc,				/* I - Number of command-line arguments */
     */
 
     if (SAMBAServer == NULL)
+    {
       SAMBAServer = cupsServer();
+
+      if (SAMBAServer[0] == '/')	/* Use localhost instead of domain socket */
+	SAMBAServer = "localhost";
+    }
 
     num_dests = cupsGetDests2(http, &dests);
 
